--- a/subpages/subpages1.html
+++ b/subpages/subpages1.html
@@ -80,13 +80,13 @@
 				</a>
 			</li>
 			<li>
-				<a href="#" open-type="common">
+				<a href="subpages6.html" open-type="common">
 					<span class="iconfont icon-shuoming"></span>	
 					<p>使用说明</p>
 				</a>
 			</li>
 			<li>
-				<a href="#" open-type="common">
+				<a href="subpages7.html" open-type="common">
 					<span class="iconfont icon-weibiaoti--"></span>	
 					<p>固定打水码</p>
 				</a>
